--- a/TripplePlay/app/src/main/res/layout/activity_htp.xml
+++ b/TripplePlay/app/src/main/res/layout/activity_htp.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".htpActivity">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="209dp"
+        android:layout_height="220dp"
+        android:text="Instructions on how to play the game"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
