added ScoreBoard activity for tournament, added an intent too

--- a/TripplePlay/app/src/main/res/layout/activity_score.xml
+++ b/TripplePlay/app/src/main/res/layout/activity_score.xml
@@ -4,32 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".rpsActivity">
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go to Tournament Score Board"
-        android:onClick="onClickSB"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.814"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.89" />
+    tools:context=".scoreActivity">
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="310dp"
-        android:layout_height="65dp"
-        android:text="Rock Paper Scissors game"
+        android:id="@+id/textView4"
+        android:layout_width="276dp"
+        android:layout_height="82dp"
+        android:text="Tripple Play Tournament Score Board"
         android:textColor="@color/colorPrimary"
         android:textSize="25dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintHorizontal_bias="0.372"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintVertical_bias="0.162" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="144dp"
+        android:layout_height="75dp"
+        android:text="Go to Start Screen"
+        android:onClick="onClickSS"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.662"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.809" />
 </android.support.constraint.ConstraintLayout>
