--- a/TripplePlay/app/src/main/res/layout/activity_rps.xml
+++ b/TripplePlay/app/src/main/res/layout/activity_rps.xml
@@ -37,8 +37,8 @@
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go to Tournament Score Board"
-        android:onClick="onClickSB"
+        android:text="Go back to Start Screen"
+        android:onClick="onClickSS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.814"
