--- a/TripplePlay/app/src/main/res/layout/activity_hangman.xml
+++ b/TripplePlay/app/src/main/res/layout/activity_hangman.xml
@@ -34,14 +34,14 @@
         app:layout_constraintVertical_bias="0.012" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/guessBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Button"
+        android:text="Guess"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.971"
@@ -83,21 +83,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.945" />
 
-    <ImageView
-        android:id="@+id/hangmanIMG"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+    <FrameLayout
+        android:id="@+id/nooseFrame"
+        android:layout_width="235dp"
+        android:layout_height="243dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.258"
+        app:layout_constraintHorizontal_bias="0.657"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.142"
-        app:srcCompat="@drawable/hangman0"
-        android:contentDescription="TODO" />
+        app:layout_constraintVertical_bias="0.214">
+
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
