adding onclickListeners, preparing for functions to be implements

--- a/TripplePlay/app/src/main/res/layout/activity_c4.xml
+++ b/TripplePlay/app/src/main/res/layout/activity_c4.xml
@@ -54,31 +54,31 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/imageButton7"
+                android:id="@+id/row2col1"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton8"
+                android:id="@+id/row2col2"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton9"
+                android:id="@+id/row2col3"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton10"
+                android:id="@+id/row2col4"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton11"
+                android:id="@+id/row2col5"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
@@ -89,31 +89,31 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/imageButton12"
+                android:id="@+id/row3col1"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton13"
+                android:id="@+id/row3col2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton16"
+                android:id="@+id/row3col3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton15"
+                android:id="@+id/row3col4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton14"
+                android:id="@+id/row3col5"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
@@ -124,31 +124,31 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/imageButton21"
+                android:id="@+id/row4col1"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton20"
+                android:id="@+id/row4col2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton19"
+                android:id="@+id/row4col3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton18"
+                android:id="@+id/row4col4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton17"
+                android:id="@+id/row4col5"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
@@ -159,31 +159,31 @@
             android:layout_height="match_parent">
 
             <ImageButton
-                android:id="@+id/imageButton30"
+                android:id="@+id/row5col1"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton31"
+                android:id="@+id/row5col2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton32"
+                android:id="@+id/row5col3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton33"
+                android:id="@+id/row5col4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageButton
-                android:id="@+id/imageButton34"
+                android:id="@+id/row5col5"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
@@ -193,7 +193,7 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="319dp"
-        android:layout_height="103dp"
+        android:layout_height="69dp"
         android:gravity="center"
         android:text="Welcome to 4 in a row"
         android:textAppearance="@style/TextAppearance.AppCompat"
@@ -204,7 +204,19 @@
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.894" />
+        app:layout_constraintVertical_bias="0.843" />
+
+    <Button
+        android:id="@+id/resetBTN"
+        android:layout_width="87dp"
+        android:layout_height="45dp"
+        android:text="Reset"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.969" />
 
     <Button
         android:id="@+id/nextBTN"
