--- a/TripplePlay/app/src/main/res/layout/fragment_next_game.xml
+++ b/TripplePlay/app/src/main/res/layout/fragment_next_game.xml
@@ -11,5 +11,5 @@
         android:id="@+id/nextBTN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next" />
+        android:text="@string/nextBTN" />
 </FrameLayout>
