--- a/TripplePlay/app/src/main/res/layout-v26/activity_hangman.xml
+++ b/TripplePlay/app/src/main/res/layout-v26/activity_hangman.xml
@@ -84,8 +84,8 @@
 
     <FrameLayout
         android:id="@+id/nooseFrame"
-        android:layout_width="235dp"
-        android:layout_height="243dp"
+        android:layout_width="232dp"
+        android:layout_height="250dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.734">
 
-        <TextView
+        <!--<TextView
             android:id="@+id/guessSpace0TV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -142,7 +142,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/guessSpace4TV" />
+            android:text="@string/guessSpace4TV" />-->
 
     </LinearLayout>
 
