--- a/TripplePlay/app/src/main/res/layout-v26/guess_word_layout.xml
+++ b/TripplePlay/app/src/main/res/layout-v26/guess_word_layout.xml
@@ -14,6 +14,8 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="4dp"
         android:hint="@string/guessWord_hint"
+        android:importantForAutofill="no"
         android:inputType="text"
-        android:importantForAutofill="no" />
+        android:maxLength="6"
+        android:singleLine="true" />
 </LinearLayout>
