So much closer with the guess TextView

--- a/TripplePlay/app/src/main/res/layout-v26/activity_hangman.xml
+++ b/TripplePlay/app/src/main/res/layout-v26/activity_hangman.xml
@@ -101,7 +101,9 @@
         android:id="@+id/guessWordLayout"
         android:layout_width="385dp"
         android:layout_height="82dp"
+        android:gravity="clip_horizontal"
         android:orientation="horizontal"
+        android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
