Guessing almost works
Still a (WIP), need to figure out how to set the text of the generated TextView to be what the user guesses correctly, but it crashes on inpact of attempting to set the text. using an array to keep track of generated TextViews, indexing properly, but still crashes. Will look into.

--- a/TripplePlay/app/src/main/res/layout-v26/activity_hangman.xml
+++ b/TripplePlay/app/src/main/res/layout-v26/activity_hangman.xml
@@ -61,6 +61,7 @@
         android:hint="@string/guessLetterET"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
+        android:maxLength="6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.189"
@@ -110,42 +111,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.734">
-
-        <!--<TextView
-            android:id="@+id/guessSpace0TV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/guessSpace0TV" />
-
-        <TextView
-            android:id="@+id/guessSpace1TV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/guessSpace1TV" />
-
-        <TextView
-            android:id="@+id/guessSpace2TV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/guessSpace2TV" />
-
-        <TextView
-            android:id="@+id/guessSpace3TV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/guessSpace3TV" />
-
-        <TextView
-            android:id="@+id/guessSpace4TV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/guessSpace4TV" />-->
-
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
