--- a/TripplePlay/app/src/main/res/layout/guess_word_layout.xml
+++ b/TripplePlay/app/src/main/res/layout/guess_word_layout.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/guessWordLayout"
+    android:layout_width="385dp"
+    android:layout_height="82dp"
+    android:gravity="clip_horizontal"
+    android:orientation="horizontal"
+    android:padding="20dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.734">
 
-    <EditText
-        android:id="@+id/guessWordET"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/spaceTV"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
-        android:hint="@string/guessWord_hint"
-        android:inputType="textEmailAddress"
-        android:autofillHints="" tools:targetApi="o"/>
+        android:layout_weight="1"
+        android:text="@string/spaceTV"
+        android:textAllCaps="true"
+        android:textColor="#000"
+        android:textSize="69sp" />
 </LinearLayout>
+
