--- a/TripplePlay/app/src/main/res/values/styles.xml
+++ b/TripplePlay/app/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="guessWordTheme" parent="android:Theme.Holo">
+        <item name="guessWordStyle">@style/guessWordStyle</item>
+    </style>
+
+    <!-- Define the custom button style itself. Make sure
+         to inherit from an existing button style. -->
+    <style name="guessWordStyle" parent="Base.TextAppearance.AppCompat.Large">
+        <item name="android:textColor">#000</item>
+        <item name = "android:textAllCaps">true</item>
+        <item name = "android:textSize">35sp</item>
+    </style>
+
 </resources>
