HAHA!!! I am genius.
Guessing works, but now I must tighten up the allowed guess cases, if a user should be able to guess the whole word or not, if they miss one letter in their gurss should they still get those they guessed correct with no punishment? I think not. Must tighten up on guess requirments, and then determine a winner and reset the game to allow multiple players

--- a/TripplePlay/app/src/main/res/layout-v26/activity_hangman.xml
+++ b/TripplePlay/app/src/main/res/layout-v26/activity_hangman.xml
@@ -51,6 +51,7 @@
 
     <EditText
         android:id="@+id/guessET"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -60,14 +61,15 @@
         android:ems="10"
         android:hint="@string/guessLetterET"
         android:importantForAutofill="no"
-        android:inputType="textPersonName"
         android:maxLength="6"
+        android:textAllCaps="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.189"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.902" />
+        app:layout_constraintVertical_bias="0.902"
+        android:inputType="" />
 
     <Button
         android:id="@+id/nextBTN"
