--- a/TripplePlay/app/src/main/res/layout/guess_wordinput_layout.xml
+++ b/TripplePlay/app/src/main/res/layout/guess_wordinput_layout.xml
@@ -7,6 +7,7 @@
 
     <EditText
         android:id="@+id/guessWordET"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
