--- a/TripplePlay/app/src/main/res/layout/list_items.xml
+++ b/TripplePlay/app/src/main/res/layout/list_items.xml
@@ -6,6 +6,7 @@
         android:id="@+id/text1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimaryDark"
         android:text="TextView"
        />
 
@@ -13,6 +14,7 @@
         android:id="@+id/text2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorPrimary"
         android:text="TextView"
      />
 
