--- a/TripplePlay/app/src/main/res/layout/activity_main.xml
+++ b/TripplePlay/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:layout_width="184dp"
         android:layout_height="42dp"
         android:fontFamily="monospace"
-        android:text="Tripple Play"
+        android:text="@string/tripple_play_titleTV"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
