--- a/TripplePlay/app/src/main/res/layout/activity_htp.xml
+++ b/TripplePlay/app/src/main/res/layout/activity_htp.xml
@@ -20,14 +20,41 @@
 
     <TextView
         android:id="@+id/instructTV"
-        android:layout_width="209dp"
-        android:layout_height="220dp"
-        android:text="Instructions on how to play the game"
+        android:layout_width="363dp"
+        android:layout_height="69dp"
+        android:text="How to triPPle Play:"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.036" />
+
+    <MultiAutoCompleteTextView
+        android:id="@+id/multiAutoCompleteTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="377dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="8dp"
+        android:isScrollContainer="true"
+        android:scrollbars="vertical"
+        android:text="Hang Man:\n
+        Lets a user enter in a word that the other user has to guess 1 character at a time. After this user has entered the winning characters. It would go to a new page hiding the word chosen. Let’s the second user pick a character A-Z trying to guess the correct word the first user has chosen. If you choose a wrong character a part of a stick figure character would be draw. If you choose the correct character the letter will be filled into the blank. _ A _ _ something like that. If the stick figure person is complete than you lose the game and the word is filled in.
+
+\n\nConnect Four:\n
+        The game board has 5 rows and 5 columns. Only 2 users can play at one time. First user is always red and user two is always blue. The first player to connect 4 squares wins the game. Each user can place their square anywhere on the board that is not already chosen. If red user gets 4 in a row their squares will change color to orange notifying that you won the game and blue will be purple.
+
+\n\nRock Paper Scissors:\n
+        Each player gets to choose from rock paper or scissors. Rock beats scissors. Scissors beats paper and paper beats rock.
+
+\n\nAll games are first to 3 wins. The game keeps track of the score for all users."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.243" />
 
 </android.support.constraint.ConstraintLayout>
